elk-k8s/deploy-elk.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elastic-ss
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - secretName: tanzu-system-ingress/wild-tls
    hosts:
    - elastic-ss.cnd.lab
  rules:
  - host: elastic-ss.cnd.lab
    http:
      paths:
      - path: /
        backend:
          serviceName: elastic-ss-es-http
          servicePort: 9200
