elk-k8s/deploy-kibana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ss
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - secretName: tanzu-system-ingress/wild-tls
      hosts:
        - kibana-ss.cnd.lab
  rules:
    - host: kibana-ss.cnd.lab
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana-ss-kb-http
              servicePort: 5601
